test/modules/standard/FileSystem/lydia/sameFile/brokenSymlink.good
brokenSymlink.chpl:25: error: No such file or directory in sameFile(moved.txt, linkToIt)
